2006-05-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundleAdditions.m: ([loadNibNamed:owner:]) if the NIB can't
	be found in the owners bundle, try the main bundle of the application.
	Fixes loading where the files owner is in a library, framework or
	bundle, but the Gorm/NIB file is in the application resources.
	I'm not sure this is the correct order, perhaps we should try the
	main bundle first and the library/framework only if the rersource
	is not in the main bundle.

2006-05-06  Fred Kiefer <FredKiefer@gmx.de>

	* Resources/Esperanto.lproj/Localizable.string,
	* Resources/German.lproj/Localizable.string: New string
	translations. Patch by Ingolf Jandt <i.jandt@web.de>.	
	* Resources/GNUmakefile: Added new languages.

2006-05-06  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m (-_editNextEditableCellAfterRow:column:,
	_editPreviousEditableCellBeforeRow:column:) Select the new row
	before editing a cell. 
	* Source/NSComboBoxCell.m (GSComboWindow -validateSelection):
	Removed the didChangeText call on the textObject.      
	Patches by Andreas Höschler <ahoesch@smartsoft.de>.
	
2006-05-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWindow.m: ([-makeFirstResponder:]) fixed for nil argument.
	* Headers/AppKit/NSWindow.h: documented method.

2006-05-03  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSDisplayServer.h (-nativeWindow:::::):
	Added new method.
	* Source/GSDisplayServer.m (-nativeWindow:::::):
	Implemented this method as subclassResponsibility.
	* Source/NSWindow.m (-initWithWindowRef:], -windowRef):
	Implemented these methods to wrap native window into GNUstep windows.

2006-05-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMatrix..m: ([performKeyEquivalent:]) Check modifier flags
	of cells when determining whether to perform their key equivalents.
	* Source/NSMenu.m: ([performKeyEquivalent:]) Use key equivalent
	modifier mask as suggested by Fred, rather than original hard-coded
	command modifier.