@@ -1,3 +1,12 @@
+2006-05-10  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSApplication.m (-finishLaunching): Don't display the
+	application icon window if the GSDontShowAppIcon is set to YES.
+	Patch by  Saso Kiselkov <diablos@manga.sk>. 
+	* Documentation/GuiUser/DefaultsSuppary.gsdoc: Document GSDontShowAppIcon.
+	* Source/GSDragView.m: Resorted method definitions to remove
+	compiler warnings.
+
 2006-05-10  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSBundleAdditions.m: ([loadNibNamed:owner:]) if the NIB can't
